--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^2.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "2.0.4",
     "sweetalert": "^2.1.0"
   },
