--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "firebase": "^5.5.4",
     "gh-pages": "^2.0.1",
     "react": "^16.5.2",
+    "react-carousel-slider": "^2.0.13",
     "react-dom": "^16.5.2",
     "react-google-maps": "^9.4.5",
     "react-scripts": "2.0.4",
+    "react-swipe-deck": "^0.1.17",
     "sweetalert": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
