--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd-init": "^2.0.6",
     "firebase": "^5.5.4",
     "gh-pages": "^2.0.1",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-carousel-slider": "^2.0.13",
     "react-dom": "^16.5.2",
