--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "react-carousel-slider": "^2.0.13",
     "react-dom": "^16.5.2",
     "react-google-maps": "^9.4.5",
+    "react-redux": "^5.1.0",
     "react-scripts": "2.0.4",
     "react-swipe-deck": "^0.1.17",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.0"
   },
   "scripts": {
