--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-carousel-slider": "^2.0.13",
     "react-dom": "^16.5.2",
     "react-google-maps": "^9.4.5",
+    "react-notification-badge": "^1.3.4",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
